--- a/app/src/main/res/layout/activity_sales_pin.xml
+++ b/app/src/main/res/layout/activity_sales_pin.xml
@@ -56,6 +56,7 @@
 
             <!-- Card and Amount Info -->
             <LinearLayout
+                android:id="@+id/card_info_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/white_card_background"
@@ -99,6 +100,7 @@
                 android:visibility="gone">
 
                 <TextView
+                    android:id="@+id/pin_subtitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
