--- a/app/src/main/res/layout/bas_activity_swipe_card.xml
+++ b/app/src/main/res/layout/bas_activity_swipe_card.xml
@@ -107,7 +107,7 @@
                     android:id="@+id/card_image"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/ic_card_rectangle"
+                    android:src="@drawable/ic_credit_card"
                     android:scaleType="fitXY"/>
                 
                 <!-- Card Chip -->
